proto-feat: preparations for tgd